--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,10 @@
 .footer{
-    width: 1200px;
-    background-color: #A9ED89;
-    font-size: 16px;
-    color: darkgreen;
+    background-color: #3f4f6d;
+    font-size: 18px;
+    color: white;
     padding: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -16,12 +15,15 @@
 .created{
     text-align: left;
     padding-left: 15px;
-    font-size: 20px;
+    font-size: 24px;
+
+    span {
+        font-size: 18px;
+    }
 }
 
 .developersList{
     display: flex;
-    flex-wrap: wrap;
     list-style-type: none;
     justify-content: space-between;
 }
@@ -35,7 +37,7 @@
 }
 
 .year {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .rslogo:hover{
