--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,9 @@
 .header{
-    width: 1200px;
-    background-color: #9FD7F6;
-    font-size: 16px;
-    padding: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    box-shadow: 0px 5px 35px #3f4f6d
 }
 
 .logo {
-    width: 150px;
+    width: 80px;
 }
 
 .input{
