--- a/src/components/Exchange-rates/exch-rates.scss
+++ b/src/components/Exchange-rates/exch-rates.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: space-around;
   width: 650px;
-  background: linear-gradient(rgb(4, 0, 41), rgb(11, 92, 0));
+  background: linear-gradient(rgb(246, 245, 255), rgb(207, 218, 255));
   font-size: 30px;
-  color: antiquewhite;
+  color: rgb(0, 0, 0);
   text-shadow: 1px 1px rgb(255, 252, 47);
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 3px 2px 1px green;
   li {
     font-family: monospace;
