--- a/src/components/LocalTime/localTIme.scss
+++ b/src/components/LocalTime/localTIme.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 250px;
-  height: 200px;
-  background: linear-gradient(rgb(4, 0, 41), rgb(11, 92, 0));
+  width: 20vw;
+  height: 120px;
+  background: linear-gradient(rgb(246, 245, 255), rgb(207, 218, 255));
   font-size: 30px;
-  color: antiquewhite;
+  color: rgb(0, 0, 0);
   text-shadow: 1px 1px rgb(255, 252, 47);
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 3px 2px 1px green;
   .localtime-clock {
     font-family: monospace;
